--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <script src="app.js" defer></script>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-
+        <div class="container"></div>
     </body>
 </html>
