Add button to ask for number of squares

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <button>Set Size</button>
         <div class="container"></div>
     </body>
 </html>
