Rename size button and add class

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <button>Set Size</button>
+        <button class="set">Set Size</button>
         <div class="container"></div>
     </body>
 </html>
