--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <button class="set">Set Size</button>
+        <button class="reset">Reset</button>
         <div class="container"></div>
     </body>
 </html>
