--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <button class="set">Set Size</button>
-        <button class="reset">Reset</button>
+        <div class="buttons">
+            <button class="set">Set Size</button>
+            <button class="reset">Reset</button>
+        </div>
         <div class="container"></div>
     </body>
 </html>
