Redo and add div containers for flexbox

--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="buttons">
-            <button class="set">Set Size</button>
-            <button class="reset">Reset</button>
+        <div class="title">Etch-a-Sketch</div>
+        <div class="content">
+            <div class="buttons">
+                <button class="set">Set Size</button>
+                <button class="reset">Reset</button>
+            </div>
+            <div class="container"></div>
         </div>
-        <div class="container"></div>
     </body>
 </html>
